[metadata]
name = AutoMSR
version = attr: automsr.__version__
author = Cristiano Salerno
author_email = cristianosalerno1@gmail.com
description = A software that enabled automatic execution of Microsoft Rewards activities and searches.
long_description = file: README.md
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
packages = find:

[flake8]
exclude = .git,.tox,venv_temp
extend-ignore = E203
max-line-length = 99

[isort]
profile = black
